# KaspaFaucet

./: Cargo.toml  faucet-config.toml
.cargo/: config.toml
src/: config.rs  lib.rs  main.rs  main_full.rs  rate_limiter.rs
static/: index.html
static/css/: site.css
